<resources>
    <string name="app_name">THE CARTEL</string>
    <string name="header_name">THE CARTEL</string>
    <string name="Add_Name">Add to Cart</string>
    <string name="Buy_Now">Buy Now</string>
    <string name="WatchDogs2">Watch Dogs 2</string>
    <string name="Cyberpunk2077">CyberPunk 2077</string>
    <string name="Acreed">Assassins Creed</string>
    <string name="Wicther3">Witcher 3: Wild Hunt</string>
    <string name="GTA5">Grand Theft Auto 5</string>
    <string name="bloodborne">BloodBorne</string>
    <string name="GOW">God of War</string>
    <string name="batman">Batman:Arkham Knight</string>
    <string name="acImage">ACImage</string>
    <string name="btImage">BTimage</string>
    <string name="Gowimage">GOWimage</string>
    <string name="bbImage">bbimage</string>
    <string name="gtaimage">gtaimage</string>
    <string name="wdimage">wdimage</string>
    <string name="cybImage">cybimage</string>
    <string name="witImage">witimage</string>
    <string name="cart">cart</string>
    <string name="random">TODO</string>
    <string name="textview">TextView</string>
    <string name="supermarioI">SuperMarioImage</string>
    <string name="donkeykongI">DonkeyKongImage</string>
    <string name="sonicI">SonicImage</string>
    <string name="Donkey_Kong">Donkey Kong</string>
    <string name="zeldaI">ZeldaImage</string>
    <string name="SONIC">Sonic The Hedgehog</string>
    <string name="SuperMARIO">Super Mario Bros</string>
    <string name="LEGENDOFZELDA">THE LEGEND OF ZELDA</string>
    <string name="brothertale">BrothersImage</string>
    <string name="portalI">PortalImage</string>
    <string name="RoomImage">TheRoomImage</string>
    <string name="portal2text">Portal 2</string>
     <string name="theroomtext">The Room</string>
    <string name="wayouttext">A Way Out</string>
    <string name="satisfactImage">SatisfacImage</string>
    <string name="flightsimulatorImage">FlightSimImage</string>
    <string name="theSimsImage">theSimsImage</string>
    <string name="themeparkImage">themeparkImage</string>
    <string name="brothertaletext">Brothers:A Tale of Two Sons</string>
    <string name="satisfactorytext">Satisfactory</string>
    <string name="flightsimtext">Flight Simulator</string>
    <string name="theSimstext">The Sims</string>
    <string name="themeparktext">Theme Park</string>
    <string name="nba2k20desc">nba2k20Image</string>
    <string name="fifa20desc">fifa20Image</string>
    <string name="motorsportdesc">Motorsport7image</string>
    <string name="dirtRally2desc">DirtRally2Image</string>
    <string name="nba2k20text">NBA 2k20</string>
    <string name="fifa20text">FIFA 20</string>
    <string name="motorsport7text">Forza Motorsport 7</string>
    <string name="dirtRallytext">Dirt Rally 2.0</string>


</resources>
