<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RetroActivity"
    android:background="@drawable/star1bg">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_name"
        android:fontFamily="@font/star_jedi_lala"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />



    <ImageView
        android:id="@+id/donkeyimage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:contentDescription="@string/donkeykongI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/donkeykong"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231"
        app:srcCompat="@drawable/gb_donkeykong1" />

    <ImageView
        android:id="@+id/sonicImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:contentDescription="@string/sonicI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sonic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453"
        app:srcCompat="@drawable/genesis_sonicthehedgehog" />


    <ImageView
        android:id="@+id/marioImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="21dp"
        android:contentDescription="@string/supermarioI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/supermariobros"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@drawable/nes_supermariobros" />



    <ImageView
        android:id="@+id/zeldaIamge"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:contentDescription="@string/zeldaI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/legendofzelda"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909"
        app:srcCompat="@drawable/legend_of_zelda_image" />


    <Button
        android:id="@+id/donkeykong"
        android:layout_width="247dp"
        android:layout_height="100dp"
        android:background="@drawable/white"
        android:text="@string/Donkey_Kong"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.232" />

    <Button
        android:id="@+id/sonic"
        android:layout_width="247dp"
        android:layout_height="100dp"
        android:background="@drawable/white"
        android:text="@string/SONIC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <Button
        android:id="@+id/supermariobros"
        android:layout_width="247dp"
        android:layout_height="100dp"
        android:background="@drawable/white"
        android:text="@string/SuperMARIO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689" />

    <Button
        android:id="@+id/legendofzelda"
        android:layout_width="247dp"
        android:layout_height="100dp"
        android:background="@drawable/white"
        android:text="@string/LEGENDOFZELDA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />
</androidx.constraintlayout.widget.ConstraintLayout>