<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".puzzleActivity"
    android:background="@drawable/star1bg">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_name"
        android:fontFamily="@font/star_jedi_lala"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />



    <ImageView
        android:id="@+id/brotherstaleI"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:contentDescription="@string/brothertale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/brotherstalebutton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231"
        app:srcCompat="@drawable/brotherstale_image" />

    <ImageView
        android:id="@+id/portal2I"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:contentDescription="@string/portalI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/portal2button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453"
        app:srcCompat="@drawable/portal2image" />


    <ImageView
        android:id="@+id/theroomI"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="21dp"
        android:contentDescription="@string/RoomImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/theroomButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@drawable/theroom" />



    <ImageView
        android:id="@+id/wayOutImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:contentDescription="@string/zeldaI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/wayoutbutton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909"
        app:srcCompat="@drawable/awayoutimage" />


    <Button
        android:id="@+id/brotherstalebutton"
        android:layout_width="247dp"
        android:layout_height="100dp"
        android:background="@drawable/white"
        android:text="@string/brothertaletext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.232" />

    <Button
        android:id="@+id/portal2button"
        android:layout_width="247dp"
        android:layout_height="100dp"
        android:background="@drawable/white"
        android:text="@string/portal2text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <Button
        android:id="@+id/theroomButton"
        android:layout_width="247dp"
        android:layout_height="100dp"
        android:background="@drawable/white"
        android:text="@string/theroomtext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689" />

    <Button
        android:id="@+id/wayoutbutton"
        android:layout_width="247dp"
        android:layout_height="100dp"
        android:background="@drawable/white"
        android:text="@string/wayouttext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />
</androidx.constraintlayout.widget.ConstraintLayout>